# SinglePassSystem

./: Application.glade  CMakeLists.txt  LoginApp.h  MessengerApp.h  OrderPassApp.h  README.txt  SinglePassApp.h  main.cpp  main_settings.h  postgres.h
